refactor: reorgernize api spec to improve readable
